# ESG-test-data

./: Cargo.toml  names-for-test-data-gen.csv
config/: common_factors.json  countries.json  v1.countries.json  v2.countries.json
input/: 3_emps.csv  accidents.csv  employee_DB.csv  training_dataset.csv
output/: accidents.csv  leaves.csv  out.csv
src/: .trng.main.rs.trng.swp  accidents.main.rs.accidents  bounds_check.rs  emp_output.csv  main.rs  trng.main.rs.trng  trng.v1.txt  v1.txt
