[package]
name = "test-data-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#test-data-generation = "0.3.4"
rand = "0.8.5"
random-string = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#reqwest = { version = "0.11", features = ["json"] }
#tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"
statrs = "0.16.0"


